--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,33 +4,32 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        // {
-        //     "type": "node",
-        //     "request": "attach",
-        //     "name": "Attach to Remote",
-        //     "address": "TCP/IP address of process to be debugged",
-        //     "port": 9229,
-        //     "localRoot": "${workspaceFolder}",
-        //     "remoteRoot": "Absolute path to the remote directory containing the program"
-        // },
+        {
+            "type": "chrome",
+            "request": "attach",
+            "name": "Attach to Chrome",
+            "port": 9222,
+            "webRoot": "${workspaceFolder}\\server.js"
+        },
+        {
+            "name": "Launch index.html",
+            "type": "chrome",
+            "request": "launch",
+            "file": "${workspaceFolder}/public/index.html"
+        },
+        
         {
             "type": "node",
             "request": "attach",
             "name": "Attach by Process ID",
             "processId": "${command:PickProcess}"
         },
-        {
-            "type": "node",
-            "request": "attach",
-            "name": "Attach",
-            "port": 9229
-        },
 
         {
             "type": "chrome",
             "request": "launch",
             "name": "Launch Chrome",
-            "url": "http://localhost:8080",
+            "url": "http://localhost:3000",
             "webRoot": "${workspaceFolder}\\server.js"
         },
         {
