--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,3 @@
-FACEBOOK_CLIENTID=<ID>
-FACEBOOK_SECRET=<SECRET>
 TWITTER_CLIENTID=<ID>
 TWITTER_SECRET=<SECRET>
 GITHUB_CLIENTID=<ID>
@@ -11,4 +9,4 @@ GOOGLE_SECRET=<SECRET>
 IMAGER_S3_KEY=AWS_S3_KEY
 IMAGER_S3_SECRET=AWS_S3_SECRET
 IMAGER_S3_BUCKET=AWS_S3_BUCKET
-MONGODB_URL=mongodb://mongo:27017/vetbook
+MONGODB_URL=mongodb://mongo:27017/noobjs_dev
