--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,8 +5,30 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "type": "node",
+            "request": "launch",
+            "name": "Launch via NPM",
+            "runtimeExecutable": "npm",
+            "runtimeArgs": [
+                "run-script",
+                "inspect",
+                "autoAttachChildProcesses"
+            ],
+            "port": 9229
+        },
+        {
+            "name": "Chrome",
+            "type": "chrome",
+            "request": "launch",
+            "protocol": "legacy",
+            "url": "http://localhost:3000",
+            "webRoot": "${workspaceRoot}"
+        },
+
+        {
             "type": "chrome",
             "request": "attach",
+            "protocol": "legacy",
             "name": "Attach to Chrome",
             "port": 9222,
             "webRoot": "${workspaceFolder}\\server.js"
@@ -14,6 +36,7 @@
         {
             "type": "node",
             "request": "attach",
+            "protocol": "legacy",
             "name": "Attach by Process ID",
             "processId": "${command:PickProcess}"
         },
@@ -21,6 +44,7 @@
         {
             "type": "chrome",
             "request": "launch",
+            "protocol": "legacy",
             "name": "Launch Chrome",
             "url": "http://localhost:3000",
             "webRoot": "${workspaceFolder}\\server.js"
@@ -28,6 +52,7 @@
         {
             "type": "node",
             "request": "launch",
+            "protocol": "legacy",
             "name": "Launch Node",
             "program": "${workspaceFolder}\\server.js"
         }
