--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "scripts": {
     "start": "cross-env NODE_ENV=development nodemon --inspect server.js",
-    "debug": "cross-env NODE_ENV=development nodemon --debug server.js",
+    "debug": "cross-env NODE_ENV=development nodemon --inspect server.js",
     "test": "cross-env NODE_ENV=test babel-tape-runner test/test-*.js",
     "pretest": "eslint .",
     "prod": "pm2-runtime start ecosystem.config.js --env production"
